@startuml amic

class MrpProduction{
product_id
product_qty
bom_id
routing_id
move_raw_ids
--
wokorder_ids
move_raw_ids
}

class MrpWorkorder {
    qty_produced: cantidad real producida
    date_end: fecha final
}

class MrpWorkcenterProductivity {
    date_start: datetime
    date_end: datetime
    duration: float
    operator_id
    workcenter_id
    loss_id
}

class StockMoveLine {
product_id
lot_id
product_uom_qty: Reservado
qty_done: Hecho
}

class StockMove {
--
active_move_line_ids
}

MrpWorkorder *-- StockMoveLine : active_move_line_ids
MrpWorkorder --* MrpWorkcenterProductivity : time_ids
MrpProduction --* MrpWorkorder : workorder_ids
MrpProduction -* StockMove: move_raw_ids
StockMove -* StockMoveLine: active_move_line_ids

note right of StockMoveLine : lotes hechos

@enduml